# m365-graph-schema-monitor

./: PLAN.md  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/aadlc/: current-pr-contract.md  invariants.yml  memory.md  trust-boundaries.md
.github/aadlc/plans/: README.md  plan-template.md  pr6-version-comparison.md  pr7-add-authenticated-graph.md  pr8-add-first-class-auth-unauth-comparison.md  pr9-evidence-bundling.md
.github/instructions/core/: aadlc.instructions.md  baseline.instructions.md  cognition-governance.instructions.md  memory-cache.instructions.md  pr-contract.instructions.md
.github/workflows/: ci.yml
src/graph_schema_monitor/: __init__.py  cli.py  diff.py  fetcher.py  parser.py  report.py  report_filters.py  snapshots.py  source_compare.py  versioning.py  watchlists.py  workflows.py
tests/: conftest.py  test_cli.py  test_diff.py  test_fetcher.py  test_parser.py  test_report.py  test_report_filters.py  test_snapshots.py  test_source_compare.py  test_versioning.py  test_watchlists.py  test_workflows.py
tests/fixtures/: schema_new.xml  schema_old.xml  watchlist_empty_prefixes.json  watchlist_identity.json
